--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation"
+    app:startDestination="@id/recipeFragment">
 
+    <fragment
+        android:id="@+id/recipeFragment"
+        android:name="com.example.gingerbread.RecipeFragment"
+        android:label="fragment_recipe"
+        tools:layout="@layout/fragment_recipe" />
+    <fragment
+        android:id="@+id/savedRecipeFragment"
+        android:name="com.example.gingerbread.SavedRecipeFragment"
+        android:label="fragment_saved_recipe"
+        tools:layout="@layout/fragment_saved_recipe" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.gingerbread.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
 </navigation>
