--- a/app/src/main/res/layout/fragment_saved_recipe.xml
+++ b/app/src/main/res/layout/fragment_saved_recipe.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SavedRecipeFragment">
+    tools:context=".Fragments.SavedRecipeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
