--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
   <!-- Base application theme. -->
   <style name="Theme.Gingerbread" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
       <!-- Primary brand color. -->
-      <item name="colorPrimary">@color/primary_light</item>
-      <item name="colorPrimaryVariant">@color/primaryDark_light</item>
+      <item name="colorPrimary">@color/primary_dark</item>
+      <item name="colorPrimaryVariant">@color/primaryDark_dark</item>
       <item name="colorOnPrimary">@color/black</item>
       <!-- Secondary brand color. -->
       <item name="colorSecondary">@color/secondary_light</item>
