--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -10,14 +10,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragments.recipe.RecipeFragment">
+        tools:context=".ui.fragments.recipe.RecipeFragment"
+        android:background="@color/lightgrey">
 
         <com.todkars.shimmer.ShimmerRecyclerView
             android:id="@+id/shimmerRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:orientation="vertical"
             app:shimmer_recycler_item_count="3"
             app:shimmer_recycler_layout="@layout/placeholder_row_layout"
